src/tpCGSParser.java
// Generated from C:/Users/comta/OneDrive/Ambiente de Trabalho/4ano/TPGCS/GCS_Project\tpCGS.g4 by ANTLR 4.9

    import java.util.HashMap;
    import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class tpCGSParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, CONCEPTS=7, STUDENTS=8, 
		RESOURCES=9, WORD=10, NUM=11, QWORD=12, WS=13;
	public static final int
		RULE_main = 0, RULE_jsonList = 1, RULE_jsonObject = 2, RULE_list = 3, 
		RULE_resOfL = 4, RULE_pairKeyValue = 5, RULE_jsonValue = 6, RULE_quotedWord = 7, 
		RULE_word = 8, RULE_num = 9, RULE_conc = 10, RULE_stu = 11, RULE_res = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"main", "jsonList", "jsonObject", "list", "resOfL", "pairKeyValue", "jsonValue", 
			"quotedWord", "word", "num", "conc", "stu", "res"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'['", "','", "']'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "CONCEPTS", "STUDENTS", "RESOURCES", 
			"WORD", "NUM", "QWORD", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "tpCGS.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	  class Entity {
	    HashMap<String, JsonValue> data;
	  }

	  interface JsonValue {}

	  class JsonString implements JsonValue {
	    String val = "";

	    JsonString(String i){
	        this.val = i;
	       }
	 @Override
	    public String toString(){
	        return this.val;
	    }
	   }
	  class JsonNum implements JsonValue {
	   Integer val = -1;

	   JsonNum(Integer i){
	    this.val = i;
	   }
	  }

	  class Json implements JsonValue {
	    HashMap<String, JsonValue> val;

	    Json (HashMap<String, JsonValue> req){
	        this.val = req;
	    }
	  }

	  class JsonList implements JsonValue{
	    ArrayList<String> val;

	    JsonList (ArrayList<String> req){
	        this.val = req;
	    }
	  }


	public tpCGSParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MainContext extends ParserRuleContext {
		public ListContext c1;
		public JsonListContext a1;
		public JsonListContext r1;
		public ConcContext conc() {
			return getRuleContext(ConcContext.class,0);
		}
		public StuContext stu() {
			return getRuleContext(StuContext.class,0);
		}
		public ResContext res() {
			return getRuleContext(ResContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public List<JsonListContext> jsonList() {
			return getRuleContexts(JsonListContext.class);
		}
		public JsonListContext jsonList(int i) {
			return getRuleContext(JsonListContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpCGSVisitor ) return ((tpCGSVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);

		    ArrayList<String> concepts = new ArrayList<>();
		    HashMap<Integer, Entity> students =  new HashMap<>();
		    HashMap<Integer, Entity> resources =  new HashMap<>();

		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			conc();
			setState(27);
			match(T__0);
			setState(28);
			((MainContext)_localctx).c1 = list(concepts);
			setState(29);
			stu();
			setState(30);
			match(T__0);
			setState(31);
			((MainContext)_localctx).a1 = jsonList(students);
			setState(32);
			res();
			setState(33);
			match(T__0);
			setState(34);
			((MainContext)_localctx).r1 = jsonList(resources);
			 for(Integer key : ((MainContext)_localctx).r1.genOUT.keySet())
			                                        System.out.println(((MainContext)_localctx).r1.genOUT.get(key).data.get("name"));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JsonListContext extends ParserRuleContext {
		public HashMap<Integer, Entity> genIN;
		public HashMap<Integer, Entity> genOUT;
		public JsonObjectContext g1;
		public JsonObjectContext g2;
		public List<JsonObjectContext> jsonObject() {
			return getRuleContexts(JsonObjectContext.class);
		}
		public JsonObjectContext jsonObject(int i) {
			return getRuleContext(JsonObjectContext.class,i);
		}
		public JsonListContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public JsonListContext(ParserRuleContext parent, int invokingState, HashMap<Integer, Entity> genIN) {
			super(parent, invokingState);
			this.genIN = genIN;
		}
		@Override public int getRuleIndex() { return RULE_jsonList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).enterJsonList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).exitJsonList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpCGSVisitor ) return ((tpCGSVisitor<? extends T>)visitor).visitJsonList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JsonListContext jsonList(HashMap<Integer, Entity> genIN) throws RecognitionException {
		JsonListContext _localctx = new JsonListContext(_ctx, getState(), genIN);
		enterRule(_localctx, 2, RULE_jsonList);

		    Entity ent = new Entity();
		    ent.data = new HashMap<>();
		    Entity ent2 =  new Entity();
		    ent2.data = new HashMap<>();
		    Integer i = 0;

		int _la;
		try {
			setState(52);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(37);
				match(T__1);
				setState(38);
				((JsonListContext)_localctx).g1 = jsonObject();
				ent.data = ((JsonListContext)_localctx).g1.ret; genIN.put(i,ent); ((JsonListContext)_localctx).genOUT = _localctx.genIN; i=1;
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(40);
					match(T__2);
					setState(41);
					((JsonListContext)_localctx).g2 = jsonObject();
					 ent2.data = ((JsonListContext)_localctx).g2.ret; _localctx.genOUT.put(i,ent2);((JsonListContext)_localctx).genOUT = _localctx.genIN;i=i+1; System.out.println(i);
					}
					}
					setState(48);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(49);
				match(T__3);
				}
				break;
			case EOF:
			case RESOURCES:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JsonObjectContext extends ParserRuleContext {
		public HashMap<String, JsonValue> ret;
		public List<PairKeyValueContext> pairKeyValue() {
			return getRuleContexts(PairKeyValueContext.class);
		}
		public PairKeyValueContext pairKeyValue(int i) {
			return getRuleContext(PairKeyValueContext.class,i);
		}
		public JsonObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonObject; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).enterJsonObject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).exitJsonObject(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpCGSVisitor ) return ((tpCGSVisitor<? extends T>)visitor).visitJsonObject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JsonObjectContext jsonObject() throws RecognitionException {
		JsonObjectContext _localctx = new JsonObjectContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_jsonObject);

		    HashMap<String, JsonValue> req = new HashMap<>();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(T__4);
			setState(55);
			pairKeyValue(req);
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(56);
				match(T__2);
				setState(57);
				pairKeyValue(req);
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			match(T__5);
			((JsonObjectContext)_localctx).ret =  req;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public ArrayList<String> conceptsIN;
		public ArrayList<String> conceptsOUT;
		public QuotedWordContext qw1;
		public ResOfLContext cs2;
		public QuotedWordContext quotedWord() {
			return getRuleContext(QuotedWordContext.class,0);
		}
		public List<ResOfLContext> resOfL() {
			return getRuleContexts(ResOfLContext.class);
		}
		public ResOfLContext resOfL(int i) {
			return getRuleContext(ResOfLContext.class,i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ListContext(ParserRuleContext parent, int invokingState, ArrayList<String> conceptsIN) {
			super(parent, invokingState);
			this.conceptsIN = conceptsIN;
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).exitList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpCGSVisitor ) return ((tpCGSVisitor<? extends T>)visitor).visitList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListContext list(ArrayList<String> conceptsIN) throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState(), conceptsIN);
		enterRule(_localctx, 6, RULE_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(T__1);
			setState(67);
			((ListContext)_localctx).qw1 = quotedWord();
			conceptsIN.add((((ListContext)_localctx).qw1!=null?_input.getText(((ListContext)_localctx).qw1.start,((ListContext)_localctx).qw1.stop):null));((ListContext)_localctx).conceptsOUT =  _localctx.conceptsIN;
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(69);
				((ListContext)_localctx).cs2 = resOfL(_localctx.conceptsOUT);
				((ListContext)_localctx).conceptsOUT =  ((ListContext)_localctx).cs2.concOUT;
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResOfLContext extends ParserRuleContext {
		public ArrayList<String> concIN;
		public ArrayList<String> concOUT;
		public QuotedWordContext qw2;
		public QuotedWordContext quotedWord() {
			return getRuleContext(QuotedWordContext.class,0);
		}
		public ResOfLContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ResOfLContext(ParserRuleContext parent, int invokingState, ArrayList<String> concIN) {
			super(parent, invokingState);
			this.concIN = concIN;
		}
		@Override public int getRuleIndex() { return RULE_resOfL; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).enterResOfL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).exitResOfL(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpCGSVisitor ) return ((tpCGSVisitor<? extends T>)visitor).visitResOfL(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ResOfLContext resOfL(ArrayList<String> concIN) throws RecognitionException {
		ResOfLContext _localctx = new ResOfLContext(_ctx, getState(), concIN);
		enterRule(_localctx, 8, RULE_resOfL);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(T__2);
			setState(80);
			((ResOfLContext)_localctx).qw2 = quotedWord();
			_localctx.concIN.add((((ResOfLContext)_localctx).qw2!=null?_input.getText(((ResOfLContext)_localctx).qw2.start,((ResOfLContext)_localctx).qw2.stop):null));((ResOfLContext)_localctx).concOUT =  _localctx.concIN;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PairKeyValueContext extends ParserRuleContext {
		public HashMap<String, JsonValue> kIN;
		public HashMap<String, JsonValue> kOUT;
		public WordContext key;
		public JsonValueContext vv;
		public WordContext word() {
			return getRuleContext(WordContext.class,0);
		}
		public JsonValueContext jsonValue() {
			return getRuleContext(JsonValueContext.class,0);
		}
		public PairKeyValueContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public PairKeyValueContext(ParserRuleContext parent, int invokingState, HashMap<String, JsonValue> kIN) {
			super(parent, invokingState);
			this.kIN = kIN;
		}
		@Override public int getRuleIndex() { return RULE_pairKeyValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).enterPairKeyValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).exitPairKeyValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpCGSVisitor ) return ((tpCGSVisitor<? extends T>)visitor).visitPairKeyValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PairKeyValueContext pairKeyValue(HashMap<String, JsonValue> kIN) throws RecognitionException {
		PairKeyValueContext _localctx = new PairKeyValueContext(_ctx, getState(), kIN);
		enterRule(_localctx, 10, RULE_pairKeyValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			((PairKeyValueContext)_localctx).key = word();
			setState(84);
			match(T__0);
			setState(85);
			((PairKeyValueContext)_localctx).vv = jsonValue();
			_localctx.kIN.put((((PairKeyValueContext)_localctx).key!=null?_input.getText(((PairKeyValueContext)_localctx).key.start,((PairKeyValueContext)_localctx).key.stop):null), ((PairKeyValueContext)_localctx).vv.val);((PairKeyValueContext)_localctx).kOUT =  _localctx.kIN; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JsonValueContext extends ParserRuleContext {
		public JsonValue val;
		public NumContext num;
		public QuotedWordContext quotedWord;
		public JsonObjectContext ret;
		public ListContext c2;
		public NumContext num() {
			return getRuleContext(NumContext.class,0);
		}
		public QuotedWordContext quotedWord() {
			return getRuleContext(QuotedWordContext.class,0);
		}
		public JsonObjectContext jsonObject() {
			return getRuleContext(JsonObjectContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public JsonValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).enterJsonValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).exitJsonValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpCGSVisitor ) return ((tpCGSVisitor<? extends T>)visitor).visitJsonValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JsonValueContext jsonValue() throws RecognitionException {
		JsonValueContext _localctx = new JsonValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_jsonValue);

		ArrayList<String> concepts = new ArrayList<>();

		try {
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUM:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				((JsonValueContext)_localctx).num = num();
				((JsonValueContext)_localctx).val =  new JsonNum(Integer.parseInt((((JsonValueContext)_localctx).num!=null?_input.getText(((JsonValueContext)_localctx).num.start,((JsonValueContext)_localctx).num.stop):null)));
				}
				break;
			case QWORD:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				((JsonValueContext)_localctx).quotedWord = quotedWord();
				String p = (((JsonValueContext)_localctx).quotedWord!=null?_input.getText(((JsonValueContext)_localctx).quotedWord.start,((JsonValueContext)_localctx).quotedWord.stop):null).toString(); ((JsonValueContext)_localctx).val =  new JsonString(p);
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				((JsonValueContext)_localctx).ret = jsonObject();
				((JsonValueContext)_localctx).val =  new Json(((JsonValueContext)_localctx).ret.ret);
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				((JsonValueContext)_localctx).c2 = list(concepts);
				((JsonValueContext)_localctx).val =  new JsonList(((JsonValueContext)_localctx).c2.conceptsOUT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuotedWordContext extends ParserRuleContext {
		public TerminalNode QWORD() { return getToken(tpCGSParser.QWORD, 0); }
		public QuotedWordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quotedWord; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).enterQuotedWord(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).exitQuotedWord(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpCGSVisitor ) return ((tpCGSVisitor<? extends T>)visitor).visitQuotedWord(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuotedWordContext quotedWord() throws RecognitionException {
		QuotedWordContext _localctx = new QuotedWordContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_quotedWord);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(QWORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WordContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(tpCGSParser.WORD, 0); }
		public WordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_word; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).enterWord(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).exitWord(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpCGSVisitor ) return ((tpCGSVisitor<? extends T>)visitor).visitWord(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WordContext word() throws RecognitionException {
		WordContext _localctx = new WordContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_word);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(tpCGSParser.NUM, 0); }
		public NumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_num; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).enterNum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).exitNum(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpCGSVisitor ) return ((tpCGSVisitor<? extends T>)visitor).visitNum(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumContext num() throws RecognitionException {
		NumContext _localctx = new NumContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_num);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConcContext extends ParserRuleContext {
		public TerminalNode CONCEPTS() { return getToken(tpCGSParser.CONCEPTS, 0); }
		public ConcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).enterConc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).exitConc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpCGSVisitor ) return ((tpCGSVisitor<? extends T>)visitor).visitConc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConcContext conc() throws RecognitionException {
		ConcContext _localctx = new ConcContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_conc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(CONCEPTS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StuContext extends ParserRuleContext {
		public TerminalNode STUDENTS() { return getToken(tpCGSParser.STUDENTS, 0); }
		public StuContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stu; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).enterStu(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCGSListener ) ((tpCGSListener)listener).exitStu(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpCGSVisitor ) return ((tpCGSVisitor<? extends T>)visitor).visitStu(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StuContext stu() throws RecognitionException {
		StuContext _localctx = new StuContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_stu);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(STUDENTS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
